# twin

./: .env.example
backend/: pyproject.toml
backend/data/: facts.json  summary.txt
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx
terraform/: backend.tf
