[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.55",
    "fastapi>=0.119.0",
    "mangum>=0.19.0",
    "openai>=2.5.0",
    "pypdf>=6.1.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
]
